[package]

name = "todo-backend"
version = "0.0.1"
authors = ["Kevin Butler <haqkrs@gmail.com>"]

[dependencies]
# nickel = "*"
postgres = "*"
lazy_static = "*"
rustc-serialize = "*"
unicase = "*"
openssl = "*"
r2d2 = "*"
time = "*"
hyper = "*"

[dependencies.nickel]

git = "https://github.com/Ryman/nickel.rs"
branch = "dev"

[dependencies.nickel_postgres]
git = "https://github.com/Ryman/nickel-postgres.git"
branch = "dev"
