[package]

name = "todo-backend"
version = "0.0.1"
authors = ["Kevin Butler <haqkrs@gmail.com>"]

[dependencies]
# nickel = "*"
postgres = { version = "0.10", features = ["openssl"] }
lazy_static = "*"
rustc-serialize = "*"
unicase = "*"
openssl = "*"
r2d2 = "*"
time = "*"
hyper = "*"
nickel = "0.7"

[dependencies.nickel_postgres]
git = "https://github.com/nickel-org/nickel-postgres.git"
